--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -37,5 +37,5 @@ security:
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         - { path: /login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/kanban/board, roles: IS_AUTHENTICATED_FULLY }
+        - { path: /, roles: IS_AUTHENTICATED_FULLY }
 #    ROLE_FULLY_AUTHENTICATED
