--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "build": "encore production --progress"
   },
   "dependencies": {
-    "jquery": "^3.5.1"
+    "core-js": "^3.7.0",
+    "jquery": "^3.5.1",
+    "jquery-ui-sortable-npm": "^1.0.0",
+    "sortablejs": "^1.12.0"
   }
 }
