Adding jwt authentication for the api calls

--- a/.env
+++ b/.env
@@ -31,3 +31,10 @@ APP_SECRET=6a58e1d243ea308caddf394118518e48
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 DATABASE_URL=mysql://root:123456@127.0.0.1:3306/kanboard-app?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+#JWT_PASSPHRASE=6681da1ae1a5cca0b7c02270d093e57a
+JWT_PASSPHRASE=secret
+###< lexik/jwt-authentication-bundle ###
