Reset code to previous commit and made some changes in order for the two firewalls to work correctly

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,6 +1,6 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
-app_login:
+app_api_login:
   path: /api/login
   methods: [POST]
