--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -19,7 +19,7 @@ security:
             stateless: true
             anonymous: true
             json_login:
-                check_path:               app_login
+                check_path:               app_api_login
                 username_path:            email
                 password_path:            password
                 success_handler:          lexik_jwt_authentication.handler.authentication_success
