Created jwt in kanboardcontroller and set to httponly cookie to be used in ajax reauest in order to persist data in kanban cards

--- a/.env
+++ b/.env
@@ -38,3 +38,5 @@ JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
 #JWT_PASSPHRASE=6681da1ae1a5cca0b7c02270d093e57a
 JWT_PASSPHRASE=secret
 ###< lexik/jwt-authentication-bundle ###
+
+API_URL_LOGIN=http://127.0.0.1:8000/api/login
