--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "core-js": "^3.7.0",
+    "dompurify": "^2.2.6",
     "jquery": "^3.5.1",
     "sortablejs": "^1.12.0"
   }
