--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -56,6 +56,7 @@ security:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
+        - { path: /register, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: /login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: /, roles: IS_AUTHENTICATED_FULLY }
 #    ROLE_FULLY_AUTHENTICATED
