--- a/.gitignore
+++ b/.gitignore
@@ -26,5 +26,5 @@ yarn-error.log
 /assets/styles/app.css
 /assets/styles/app.css.map
 ###> lexik/jwt-authentication-bundle ###
-/config/jwt/*.pem
+#/config/jwt/*.pem
 ###< lexik/jwt-authentication-bundle ###
