--- a/.env
+++ b/.env
@@ -29,6 +29,7 @@ APP_SECRET=6a58e1d243ea308caddf394118518e48
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+#DATABASE_URL=mysql://root:ZHSUBg6hgWHmLqj@kanboard-app.cv9vdfjcggiy.eu-west-1.rds.amazonaws.com:3306/kanboard-app?sslca=config/amazon-rds-ca-cert.pem"
 DATABASE_URL=mysql://root:ZHSUBg6hgWHmLqj@kanboard-app.cv9vdfjcggiy.eu-west-1.rds.amazonaws.com:3306/kanboard-app
 ###< doctrine/doctrine-bundle ###
 
