--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=prod
+APP_ENV=dev
 APP_SECRET=6a58e1d243ea308caddf394118518e48
 #TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
 #TRUSTED_HOSTS='^(localhost|example\.com)$'
@@ -29,9 +29,9 @@ APP_SECRET=6a58e1d243ea308caddf394118518e48
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://root:123456!aA@kanboard-app.cv9vdfjcggiy.eu-west-1.rds.amazonaws.com:3306/kanboard-app?sslca=config/amazon-rds-ca-cert.pem&sslmode=require&encrypt=true
+#DATABASE_URL=mysql://root:123456!aA@kanboard-app.cv9vdfjcggiy.eu-west-1.rds.amazonaws.com:3306/kanboard-app?sslca=config/amazon-rds-ca-cert.pem&sslmode=require&encrypt=true
 #DATABASE_URL=mysql://root:123456!aA@kanboard-app.cv9vdfjcggiy.eu-west-1.rds.amazonaws.com:3306/kanboard-app
-#DATABASE_URL=mysql://root:123456@127.0.0.1:3306/kanboard-app
+DATABASE_URL=mysql://root:123456@127.0.0.1:3306/kanboard-app
 #DATABASE_URL=mysql://root:ZHSUBg6hgWHmLqj@kanboard-app.cv9vdfjcggiy.eu-west-1.rds.amazonaws.com:3306/kanboard-app
 ###< doctrine/doctrine-bundle ###
 
