--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "core-js": "^3.7.0",
     "dompurify": "^2.2.6",
     "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
     "sortablejs": "^1.12.0"
   }
 }
